[tool.poetry]
name = "google-flight-scraper"
version = "0.2.0"
description = "A library to scrape and analyze Google Flight data"
authors = ["Kadri <knizam@psu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
selenium = "^4.14.0"
webdriver-manager = "^4.0.1"
numpy = "^1.26.1"
pandas = "^2.1.1"
strenum = "^0.4.15"
tqdm = "^4.66.1"
price-parser = "^0.3.4"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
pytest = "^7.4.2"
pytest-mock = "^3.12.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pandas-stubs = "^2.1.1.230928"
types-tqdm = "^4.66.0.2"


[tool.poetry.group.explore.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
